# test-fastapi

./: .env  .env.dist  basic_authenticator.py  container.py  main.py  pyproject.toml  requests.http
authenticators/: basic_authenticator.py  jwt_authenticator.py
decorators/: encrypt_decorator.py
middlewares/: authentication_middleware.py
models/: article.py  user.py
protocols/: authenticator_protocol.py  user_repository_protocol.py
repositories/: in_memory_article_repository.py  in_memory_user_repository.py
routes/: article_router.py  router.py  user_router.py
services/: encryption_service.py
utils/: extract_token.py  password_utility.py
